@@ -14,6 +14,7 @@
 - Added KunzCoordinates for an ideal of a numerical semigroup (and optionally an element in the ambient semigroup)
 - Added RemoveMinimalGeneratorFromIdeal
 - Added AsNumericalSemigroup for idemopotent ideals of numerical semigroups
+- Added IsStable for ideals of numerical semigroups
 
 1.3.1 -> 1.4.0
 - Added NumericalSemigroupsWithFrobeniusNumberPC
